
* Add optional position argument on "continue" command.

* Add pydb.runl() and pydb.runv() forms to facilitate debugging a
  program from inside a Python shell.

* fix thread bugs: on startup with threading we stopped one statement
  too soon. more careful about storing into variables used in
  threading which are not locked (and so could be changed during a
  thread switch)

1.18 2006-09-25

* Start thread debugging: 
    info thread [thread-name] [terse|verbose]    - show thread info
    qt                                     - quit current thread
    can set a breakpoint on a specific thread name.
  expand definitions of "frame" and "break" for threading

* GDB-like signal handling. Some code based on Matt Fleming's 2006
  Summer-of-Code project. Gdb's "handle" and "signal" commands.

* Add hard kill. May be needed for thread debugging.

* Fix bug in handling temporary breakpoints (tbreak) caused by the
  difference in semantics between pdb's 'clear' command and pdb's
  (which calls this 'delete' and has a different meaning for 'clear').

* 'examine' command now shows object's instance variables.

* add gdb 'FILE' command: allow loading/running a file from within
  pydb. (The old pydb from ddd had it too.)

1.17 2006-07-29
* Allow entry to the debugger without a script name.

* "examine" command output shows object attributes.
  There is a routine common to both examine and display.

* "whatis" shows doc strings if there is one.

* Fix a bug where we would get the wrong path in
  tracing through an "import x as y". This happened only if we invoked
  from a directory other than where the debugged program lives and we
  stepped into such an imported method. The fix is to save the the
  dirname of the script in the debugger instance variable.

* Fix bug when using set trace introduced in 1.16 in adding "command".

* Add gdb "directory" and "show directories" commands. 

* All "show" and "info" commands allow unique abbreviations in the