@@ -13,6 +13,11 @@
   threading which are not locked (and so could be changed during a
   thread switch)
 
+* fix bugs in signal handling. 
+
+* Add "stac" and "nostack" to list of things that can be done when
+  a signal is received.
+
 1.18 2006-09-25
 
 * Start thread debugging: 
